--- a/kafka-producer/src/main/resources/producer.properties
+++ b/kafka-producer/src/main/resources/producer.properties
@@ -1,11 +1,3 @@
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
 value.serializer=org.apache.kafka.common.serialization.StringSerializer
-
-#confluent cloud properties
-ssl.endpoint.identification.algorithm=https
-sasl.mechanism=PLAIN
-request.timeout.ms=20000
-bootstrap.servers=[confluent-cloud-ip]:9092
-retry.backoff.ms=500
-sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="<CLUSTER_API_KEY>" password="<CLUSTER_API_SECRET>";
-security.protocol=SASL_SSL
+bootstrap.servers=10.0.0.7:9092
