--- a/kafka-consumer/src/main/resources/consumer.properties
+++ b/kafka-consumer/src/main/resources/consumer.properties
@@ -2,4 +2,4 @@ group.id=testConsumerGroup1
 key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 auto.offset.reset=earliest
-bootstrap.servers=10.0.0.7:9092
+bootstrap.servers=[your-kafka-cluster-ip]:9092
