--- a/kafka-producer/src/main/resources/producer.properties
+++ b/kafka-producer/src/main/resources/producer.properties
@@ -1,3 +1,3 @@
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
 value.serializer=org.apache.kafka.common.serialization.StringSerializer
-bootstrap.servers=10.0.0.7:9092
+bootstrap.servers=[your-kafka-cluster-ip]:9092
